feat: Add enpoint consulta pagamento externo